--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+      html,
+      body,
+      canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <canvas></canvas>
